<resources>
    <string name="app_name">StockInfo</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="description">
        We take privacy seriously. Please read our policy below and let us know if you have any questions or feedback.
        This Privacy Policy concerns the apps developed by The Learning Apps.

        Our apps do not collect any identifiable information from kids.
        Device data is collected only to provide a service or function that is directly relevant to the use of our app.
        If you believe we have inadvertently collected such information, please contact us,
        so we can promptly remove the information.

        we do not collect any identifiable information from our users. The third-party service providers
        collect unidentifiable information directly from Users of the applications in the form of the
        actions they take and the activities they complete while using the application.
        We primarily use this information to improve our applications for providing a better experience to our users. </string>
    <string name="bin">Before we address the above question, let us understand what would happen if one chooses not to invest. Let us assume you earn Rs.50,000/- per month
        and you spend Rs.30,000/-towards your cost of living which includes housing, food, transport, shopping, medical, etc. The balance of Rs.20,000/- is your monthly surplus.
        For the sake of simplicity, let us just ignore the effect of personal income tax in this discussion.
    </string>
    <string name="bin1">To drive the point across, let us make a few simple assumptions.</string>
    <string name="bin2"> 1.The employer is kind enough to give you a 10% salary hike every year.</string>
    <string name="bin3"> 2.The cost of living is likely to go up by 8% year on year.</string>
    <string name="bin4"> 3.You are 30 years old and plan to retire at 50. This leaves you with 20 more years to earn.</string>
    <string name="bin5"> 4.You don’t intend to work after you retire.</string>
    <string name="bin6"> 5.Your expenses are fixed and don’t foresee any other expense.</string>
    <string name="bin7"> 6. The balance cash of Rs.20,000/- per month is retained in the form of hard cash.</string>
    <string name="bin8">Going by these assumptions, here is how the cash balance will look like in 20 years.</string>
    <string name="bin9">If one were to analyze these numbers, you would soon realize this is a scary situation to be in. Few things are quite startling from the above calculations:</string>
    <string name="bin10">1.After 20 years of hard work you have accumulated Rs.1.7Crs.</string>
    <string name="fi1">From the time you access the market – let’s just say, to buy a stock till the time the stocks come and hit your DEMAT account, a bunch of corporate entities is actively involved in making this work for you. These entities play their role quietly behind the scene, always complying with the rules laid out by SEBI and ensure an effortless and smooth experience for your transactions in the stock market. These entities are generally referred to as the Financial Intermediaries.</string>
    <string name="fi2">Together, these financial intermediaries, interdependent of one another, create an ecosystem in which the financial markets exist. This chapter will help you get an overview of what these financial intermediaries are and the services they offer.</string>
    <string name="fi3">The stockbroker is probably one of the most important financial intermediaries that you need to know. A stockbroker is a corporate entity, registered as a trading member with the stock exchange and holds a stockbroking license. They operate under the guidelines prescribed by SEBI.</string>
    <string name="fi4">A stockbroker is your gateway to stock exchanges. To begin with, you need to open something called a ‘Trading Account’ with a broker who meets your requirements. Your requirement could be as simple as the proximity between the broker’s office and your house. At the same time, it can be as complicated as identifying a broker who can provide you a single platform using which you can transact across multiple exchanges across the world. At a later point we will discuss what these requirements could be and how to choose the right broker.</string>
    <string name="fi5">A trading account lets you carry financial transactions in the market. A trading account is an account with the broker which lets the investor buy/sell securities.</string>
    <string name="fi6">So assuming you have a trading account – whenever you want to transact in the markets you need to interact with your broker. There are a few standard ways through which you can interact with your broker.</string>
    <string name="fi7">1.You can go to the broker’s office and meet the dealer in the broker’s office and tell him what you wish to do. A dealer is an executive at the stock broker’s office who carries out these transactions on your behalf.</string>
    <string name="fi8">2.You can make a telephone call to your broker, identify yourself with your client code (account code) and place an order for your transaction. The dealer at the other end will execute the order for you and confirm the status of the same while you are still on the call.</string>
    <string name="fi9">3.Do it yourself – this is perhaps the most popular way of transacting in the markets. The broker gives you access to the market through software called ‘Trading Terminal’. After you log in to the trading terminal, you can view live price quotes from the market, and can also place orders yourself.</string>
    <string name="fi10">The basic services provided by the brokers includes…</string>
    <string name="fi11">1.Give you access to markets and letting you transact</string>
    <string name="fi12">2.Give you margins for trading – We will discuss this point at a later stage</string>
    <string name="fi13">3.Provide support – Dealing support if you have to call and trade. Software support if you have issues with the trading terminal</string>
    <string name="fi14">4.Issue contract notes for the transactions – A contract note is a written confirmation detailing the transactions you have carried out during the day</string>
    <string name="fi15">5.Facilitate the fund transfer between your trading and bank account</string>
    <string name="fi16">6.Provide you with a back office login – using which you can see the summary of your account</string>
    <string name="fi17">7.The broker charges a fee for the services that he provides called the ‘brokerage charge’ or just brokerage. The brokerage rates vary, and it’s upto you to find a broker who strikes a balance between the fee he collects versus the services he provides.</string>
    <string name="fi18">When you buy a property the only way to identify and claim that you actually own the property is by producing the property papers. Hence it becomes extremely important to store the property papers in a safe and secure place.</string>
    <string name="fi19">Likewise when you buy a share (a share represents part ownership in a company) the only way to claim your ownership is by producing your share certificate. A share certificate is nothing but a piece of document entitling you as the owner of the shares in a company.</string>
    <string name="fi20">Before 1996 the share certificate was in paper format however post 1996, the share certificates were converted to digital form. The process of converting a paper format share certificate into a digital format share certificate is called “Dematerialization” often abbreviated as DEMAT.</string>
    <string name="fi21">The share certificate in DEMAT format has to be stored digitally. The storage place for the digital share certificate is the ‘DEMAT Account’. A Depository is a financial intermediary which offers the service of the Demat account. A DEMAT account in your name will have all the shares in the electronic format that you have bought. Think of the DEMAT account as a digital vault for your shares.</string>
    <string name="fi22">As you may have guessed, the trading account from your broker and the DEMAT account from the Depository are interlinked.</string>
    <string name="fi23">o for example if your idea is to buy Infosys shares then all you need to do is open your trading account, look for the prices of Infosys and buy it. Once the transaction is complete, the role of your trading account is done. After you buy, the shares of Infosys will automatically come and sit in your DEMAT account.</string>
    <string name="fi24">Likewise when you wish to sell Infosys shares, all you have to do is open your trading account and sell the stock. This takes care of the transaction part…however in the backend, the shares which are sitting in your DEMAT account will get debited, and the shares move out of your DEMAT account.</string>
    <string name="fi25">At present, there are only two depositaries offering you DEMAT account services. They are The National Securities Depository Limited (NSDL) and Central Depository Services (India) Limited. There is virtually no difference between the two and both of them operate under strict SEBI regulations.</string>
    <string name="fi26">Just like the way you cannot walk into National Stock Exchange’s office to open a trading account, you cannot walk into a Depository to open a DEMAT account. To open a DEMAT account you need to liaison with a Depository Participant (DP). A DP helps you set up your DEMAT account with a Depository. A DP acts as an agent to the Depository. Needless to say, even the DP is governed by the regulations laid out by the SEBI.</string>
    <string name="fi27">Banks play a very straightforward role in the market ecosystem. They help in facilitating the fund transfer from your bank account to your trading account. You cannot transfer money from a bank account that is not in your name.</string>
    <string name="fi28">Also, at this stage, you must have realized that the three financial intermediaries operate via three different accounts – trading account, DEMAT account and Bank account. All the three accounts operate electronically and are interlinked giving you a very seamless experience.</string>
    <string name="fi29">NSCCL – National Security Clearing Corporation Ltd and Indian Clearing Corporation are wholly owned subsidiaries of National Stock Exchange and Bombay Stock Exchange respectively.</string>
    <string name="fi30">The job of the clearing corporation is to ensure guaranteed settlement of your trades/transactions. For example, if you were to buy 1 share of Biocon at Rs.446 per share there must be someone who has sold that 1 share to you at Rs.446 . For this transaction, you will be debited Rs.446 from your trading account and someone must be credited that Rs.446 toward the sale of Biocon. In a typical transaction like this the clearing corporation’s role is to ensure the following:</string>
    <string name="fi31">For all practical purposes, its ok not to know much about NSCCL or ICCL simply because, you as a trader or investor would not be interacting with these agencies directly. You just need to be aware that there are certain professional institutions which are heavily regulated and they work towards smooth settlement, and efficient clearing activity.</string>
    <string name="fi32">a) Identify the buyer and seller and match the debit and credit process</string>
    <string name="fi33">b) Ensure no defaults – The clearing corporation also ensures there are no defaults by either party. For instance the seller after selling the shares should not be in a position to back out thereby defaulting in his transaction.</string>
</resources>