<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finance"
    android:background="#FAF7F7">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="#ffff"
        app:civ_border_color="#0F0D0D"
        app:title="Financial Intermediaries"></androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Financial Intermediaries"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="#0A0909"
                android:id="@+id/tx"
                android:layout_marginTop="5dp"></TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/fi1"
                android:layout_gravity="center_horizontal"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Overview"
                android:textSize="25dp"
                android:textColor="#0A0909"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi1"
                android:layout_gravity="center_horizontal"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The Stock Broker"
                android:textSize="25dp"
                android:textColor="#0A0909"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/fi3"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi4"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi5"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi6"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi7"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi8"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi9"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi10"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fi11"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi12"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi13"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi14"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi15"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi16"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fi17"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Depository and Depository Participants"
                android:textSize="25dp"
                android:textColor="#0A0909"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi18"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi19"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi20"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi21"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi22"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi23"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi24"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi25"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi26"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Banks"
                android:textSize="25dp"
                android:textColor="#0A0909"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/fi27"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi28"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NSCCL and ICCL"
                android:textSize="25dp"
                android:textColor="#0A0909"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/fi29"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi30"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi32"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi33"
                android:layout_gravity="left"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fi31"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#0A0909"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-End Of Third Section-"
                android:textSize="25dp"
                android:layout_marginTop="25dp"
                android:textColor="#0A0909"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"></TextView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
